fix background colours + test for accessible legibility + README.md

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -66,7 +66,7 @@ a:active{
 
 .header{
     background-image: url("../img/cacti-cover.webp");
-    background-color: var(--darkgreen);
+    background-color: var(--lightgreen);
     height: 700px;
     background-repeat: no-repeat;
     background-size: cover;
@@ -131,7 +131,7 @@ footer{
 
 .main-text{
     transform: translateY(-100px);
-    color: rgb(71, 71, 71);
+    color: var(--darkgrey);
     text-align: center;
     position: absolute;
 }
